# AirSentry

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  task.md  walkthrough.md
airsentry/: __init__.py
airsentry/analysis/: __init__.py  features.py  models.py  scoring.py  session.py  window_aggregator.py
airsentry/capture/: __init__.py  base.py  live.py  pcap.py
airsentry/cli/: __init__.py  main.py
airsentry/cli/commands/: __init__.py  collect.py  dataset.py  demo.py  monitor.py  replay.py  visualize.py
airsentry/config/: __init__.py  settings.py
airsentry/dataset/: __init__.py  toolkit.py
airsentry/detection/: __init__.py  base.py  engine.py  window.py
airsentry/detection/detectors/: __init__.py  beacon_anomaly.py  deauth_burst.py  rogue_ap.py
airsentry/logging/: __init__.py  jsonl_logger.py
airsentry/models/: __init__.py  alerts.py  events.py  frame_types.py
airsentry/output/: __init__.py  console.py
airsentry/parsing/: __init__.py  dispatcher.py
airsentry/parsing/frames/: __init__.py  beacon.py  deauth.py  disassoc.py  probe_req.py  probe_resp.py
airsentry/research/: __init__.py  collector.py  exporter.py  privacy.py
airsentry/survey/: __init__.py  mapper.py  scanner.py  scorer.py  store.py
airsentry/ui/: __init__.py  __main__.py  app.py  main_window.py  style.py  worker.py
airsentry/ui/views/: __init__.py  _event_feed.py  alerts_panel.py  monitor_view.py  replay_view.py  settings_view.py  summary_view.py  survey_view.py  visualize_view.py
airsentry/utils/: __init__.py  mac.py  time.py
airsentry/visualization/: __init__.py  charts.py
examples/: README.md  sample_dataset.csv
